--- a/VK_API/vk_api.ipynb
+++ b/VK_API/vk_api.ipynb
@@ -681,7 +681,7 @@
     }
    ],
    "source": [
-    "os.environ[\"TOKEN_VK\"] = 'vk1.a.5ZbWLF-CiwHBEJE4uWL1x1_LbF6dYFFHKtwSPQ3ZIHP2nQLq0gKDREJs0ubgKVB_3KS5WNwLzOtbGA53vD-KGBRRCbD0KWcyK0PpXk4YJ6FMu2YTRI5BpVN1Wzvmsa1KZsrfcsX05rhfwjhpGRGVj0eyTYOugq-peTSp6GDkpH0jBumx86eJEQI4ZPmfLDLXowjniDT8D1YQCUs960HYYQ'\n",
+    "os.environ[\"TOKEN_VK\"] = ''\n",
     "os.environ[\"TOKEN_VK\"] = get_user_token(APP_ID, SECRET_KEY_VK)\n",
     "params = {'v': '5.131', 'access_token': os.environ[\"TOKEN_VK\"]}\n",
     "print(os.environ[\"TOKEN_VK\"])"
